feat: add new category tests